--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,4 +16,6 @@ clap = { workspace = true }
 anyhow = { workspace = true }
 log = { workspace = true }
 env_logger = { workspace = true }
+trash = { workspace = true }
+walkdir = { workspace = true }
 
