--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ walkdir = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 log = { workspace = true }
+trash = { workspace = true }
 
 [dev-dependencies]
 tempfile = "3.8"
