--- a/npm/package.json
+++ b/npm/package.json
@@ -37,7 +37,9 @@
 		"@types/node": "^22.0.0",
 		"typescript": "^5.0.0"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"trash": "^8.1.1"
+	},
 	"engines": {
 		"node": ">=22.0.0"
 	}
