--- a/npm/package.json
+++ b/npm/package.json
@@ -14,7 +14,8 @@
 	"scripts": {
 		"build": "tsc && chmod +x dist/cli.js",
 		"prepublishOnly": "pnpm build",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "tsc --noEmit"
 	},
 	"keywords": [
 		"build-cleaner",
