--- a/raycast/package.json
+++ b/raycast/package.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://www.raycast.com/schemas/extension.json",
 	"name": "build-cleaner",
-	"title": "build-cleaner",
+	"title": "Build Cleaner",
 	"description": "cleaner for build system",
 	"icon": "extension-icon.png",
 	"author": "xiang",
