--- a/raycast/package.json
+++ b/raycast/package.json
@@ -1,49 +1,74 @@
 {
-	"$schema": "https://www.raycast.com/schemas/extension.json",
-	"name": "build-cleaner",
-	"title": "Build Cleaner",
-	"description": "cleaner for build system",
-	"icon": "extension-icon.png",
-	"author": "xiang",
-	"platforms": [
-		"macOS",
-		"Windows"
-	],
-	"categories": [
-		"Developer Tools"
-	],
-	"license": "MIT",
-	"commands": [
-		{
-			"name": "index",
-			"title": "Build Cleaner",
-			"description": "快速清理项目临时文件和目录",
-			"mode": "view"
-		}
-	],
-	"keywords": [
-		"raycast",
-		"build-cleaner"
-	],
-	"devDependencies": {
-		"@raycast/eslint-config": "^2.0.4",
-		"@types/node": "22.13.10",
-		"@types/react": "19.0.10",
-		"eslint": "^9.22.0",
-		"prettier": "^3.5.3",
-		"typescript": "^5.8.2"
-	},
-	"dependencies": {
-		"@raycast/api": "^1.103.4",
-		"@raycast/utils": "^1.17.0",
-		"@build-cleaner/node": "workspace:*"
-	},
-	"scripts": {
-		"build": "ray build",
-		"dev": "ray develop",
-		"fix-lint": "ray lint --fix",
-		"lint": "ray lint",
-		"prepublishOnly": "echo \"\\n\\nIt seems like you are trying to publish the Raycast extension to npm.\\n\\nIf you did intend to publish it to npm, remove the \\`prepublishOnly\\` script and rerun \\`npm publish\\` again.\\nIf you wanted to publish it to the Raycast Store instead, use \\`npm run publish\\` instead.\\n\\n\" && exit 1",
-		"publish": "pnpx @raycast/api@latest publish"
-	}
+  "$schema": "https://www.raycast.com/schemas/extension.json",
+  "name": "build-cleaner",
+  "title": "Build Cleaner",
+  "description": "cleaner for build system",
+  "icon": "extension-icon.png",
+  "author": "xjiaxiang",
+  "platforms": [
+    "macOS",
+    "Windows"
+  ],
+  "categories": [
+    "Developer Tools"
+  ],
+  "license": "MIT",
+  "commands": [
+    {
+      "name": "index",
+      "title": "Build Cleaner",
+      "description": "Quickly clean up temporary files and directories in projects",
+      "mode": "view"
+    }
+  ],
+  "preferences": [
+    {
+      "name": "defaultPath",
+      "title": "Default Path",
+      "type": "directory",
+      "required": true,
+      "description": "The default path to clean up",
+      "default": "~/Documents"
+    },
+    {
+      "name": "defaultPatterns",
+      "title": "Default Patterns",
+      "type": "textfield",
+      "required": true,
+      "description": "The default patterns to clean up",
+      "default": "node_modules/,dist/,build/,target/,__pycache__/,*.log,*.tmp"
+    }
+  ],
+  "arguments": [
+    {
+      "name": "ssss",
+      "type": "text",
+      "placeholder": "dddd"
+    }
+  ],
+  "keywords": [
+    "raycast",
+    "build-cleaner"
+  ],
+  "devDependencies": {
+    "@raycast/eslint-config": "^2.0.4",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "eslint": "^9.22.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@raycast/api": "^1.103.4",
+    "@raycast/utils": "^1.17.0",
+    "@build-cleaner/node": "workspace:*"
+  },
+  "scripts": {
+    "build": "ray build",
+    "dev": "ray develop",
+    "fix-lint": "ray lint --fix",
+    "lint": "ray lint",
+    "prepublishOnly": "echo \"\\n\\nIt seems like you are trying to publish the Raycast extension to npm.\\n\\nIf you did intend to publish it to npm, remove the \\`prepublishOnly\\` script and rerun \\`npm publish\\` again.\\nIf you wanted to publish it to the Raycast Store instead, use \\`npm run publish\\` instead.\\n\\n\" && exit 1",
+    "publish": "pnpx @raycast/api@latest publish"
+  }
 }
